refactor: migrate credential lookup to the Spring Security API
CredentialsUtils used the Acegi-based ACL.SYSTEM, Tasks.getAuthenticationOf,
CredentialsProvider.lookupCredentials and includeMatchingAs overloads that
core and the credentials plugin deprecated. Switch to ACL.SYSTEM2,
Tasks.getAuthenticationOf2, lookupCredentialsInItem and the Spring
includeMatchingAs, and extract the "job authentication or system" choice
into one helper. The deprecated overloads delegated to these same calls,
so the credential scope and authentication are unchanged.

Tests no longer call the deprecated getValues() and
DescribableModel.instantiate(Map) and use ValueService.entries and
instantiate(Map, TaskListener) instead. A compatibility test keeps
getValues() covered as public API.